<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pngtreedelicious_western_pizza_hq_pictures_504980"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/button2"
        android:layout_width="402dp"
        android:layout_height="50dp"
        android:layout_marginBottom="86dp"
        android:text="@string/Button1"
        app:icon="@drawable/ic_baseline_house_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="158dp"
        android:layout_marginBottom="416dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/textview1"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="317dp"
        android:layout_marginBottom="229dp"
        android:text="@string/Button3"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>